# aquagba

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
aquagba-core/: CMakeLists.txt
aquagba-core-tests/: CMakeLists.txt
aquagba-core-tests/src/: main.cpp
aquagba-core/src/: emu.hpp
aquagba-core/src/aquagba/: Arm7Tdmi.cpp  Arm7Tdmi.hpp  bios_rom.cpp  bios_rom.hpp  bus.cpp  bus.hpp  emu.cpp  emu.hpp  gamepak.cpp  gamepak.hpp  system_regs.cpp  system_regs.hpp  util.hpp
aquagba-desktop/: CMakeLists.txt
aquagba-desktop/src/: main.cpp
